crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_nested_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
snapshot_kind: text
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..15,
            value: FString(
                ExprFString {
                    node_index: NodeIndex(None),
                    range: 0..15,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..15,
                                    node_index: NodeIndex(None),
                                    elements: [
                                        Interpolation(
                                            InterpolatedElement {
                                                range: 2..14,
                                                node_index: NodeIndex(None),
                                                expression: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 3..6,
                                                        id: Name("foo"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    InterpolatedStringFormatSpec {
                                                        range: 7..13,
                                                        node_index: NodeIndex(None),
                                                        elements: [
                                                            Interpolation(
                                                                InterpolatedElement {
                                                                    range: 7..13,
                                                                    node_index: NodeIndex(None),
                                                                    expression: Name(
                                                                        ExprName {
                                                                            node_index: NodeIndex(None),
                                                                            range: 8..12,
                                                                            id: Name("spec"),
                                                                            ctx: Load,
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
