crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_nested_string_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
snapshot_kind: text
---
[
    Expr(
        StmtExpr {
            node_index: AtomicNodeIndex(..),
            range: 0..13,
            value: FString(
                ExprFString {
                    node_index: AtomicNodeIndex(..),
                    range: 0..13,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..13,
                                    node_index: AtomicNodeIndex(..),
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..12,
                                                node_index: AtomicNodeIndex(..),
                                                expression: Name(
                                                    ExprName {
                                                        node_index: AtomicNodeIndex(..),
                                                        range: 3..6,
                                                        id: Name("foo"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 7..11,
                                                        node_index: AtomicNodeIndex(..),
                                                        elements: [
                                                            Expression(
                                                                FStringExpressionElement {
                                                                    range: 7..11,
                                                                    node_index: AtomicNodeIndex(..),
                                                                    expression: StringLiteral(
                                                                        ExprStringLiteral {
                                                                            node_index: AtomicNodeIndex(..),
                                                                            range: 8..10,
                                                                            value: StringLiteralValue {
                                                                                inner: Single(
                                                                                    StringLiteral {
                                                                                        range: 8..10,
                                                                                        node_index: AtomicNodeIndex(..),
                                                                                        value: "",
                                                                                        flags: StringLiteralFlags {
                                                                                            quote_style: Single,
                                                                                            prefix: Empty,
                                                                                            triple_quoted: false,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                            },
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
